<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/load_standard"
        android:text="@string/load_standard"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/load_advance"
        android:text="@string/load_advance"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <Button
        android:id="@+id/load_empty"
        android:text="@string/load_empty"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/load_error"
        android:text="@string/load_error"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/load_manual"
        android:text="@string/load_manual"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/load_forbidden"
        android:text="@string/load_forbidden"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


</LinearLayout>